@@ -1,3 +1,9 @@
+2010-03-14  Chong Yidong  <cyd@stupidchicken.com>
+
+	* tramp.el (tramp): Put in comm group.
+
+	* tramp-imap.el (tramp-imap): Put in tramp group.
+
 2010-03-14  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.1.18 released.
